--- a/style.css
+++ b/style.css
@@ -129,7 +129,8 @@
 
     .imagemlogo{
         height: 1.5em;
-        width: auto;
+        width: 75px;
+        height: auto;
     }
 
     .enderecamento{
