--- a/style.css
+++ b/style.css
@@ -52,8 +52,6 @@
     }
 
     .conteudo{
-        margin-left: 10%;
-        margin-right: 10%;
         border-radius: 50px;
         padding-bottom: 1em;
         margin-top: 1.5em;
@@ -91,8 +89,6 @@
     /*  TOPICO */
 
     .topico{
-        margin-left: 3%;
-        margin-right: 3%;
         padding-top: 1%;
         color: white;
     }
@@ -101,6 +97,10 @@
         font-family: blade;
         text-shadow: 3px 3px black;
         font-size: 2.5em;
+        background-color: #03588C;
+        padding-left: 8%;
+        padding-top: 1%;
+        padding-bottom: 1%;
     }
 
     .topico > h3{
@@ -126,11 +126,13 @@
         text-align: justify;
         font-size: 1.5em;
         color: white;
-        columns: 3;
+        columns: 2;
+        width: auto;
+        padding-right: 1em;
     }
 
     #eu{
-        margin-left: 10em;
+        margin-left: 40%;
         background-color: #0378a6;
     }
 
@@ -138,6 +140,14 @@
         font-family: blade;
         text-shadow: 3px 3px black;
         font-size: 2.5em;
+        padding-left: 10px;
+        padding-top: 10px;
+    }
+
+    #eu > p {
+        padding-left: 40px;
+        padding-bottom: 15px;
+        padding-right: 20px;
     }
 
     /*  TITULO -  QUEM SOU EU */
@@ -155,7 +165,6 @@
         margin-top: 2em;
     }
 
-
     /*  TITULO - CONTATO  */
 
 
@@ -164,7 +173,6 @@
         width: 75px;
         height: auto;
         padding-left: 0.5em;
-        visibility: hidden;
     }
 
     .imagemlogocontato{
