--- a/style.css
+++ b/style.css
@@ -44,11 +44,90 @@
         width: 50%;
     }
 
+
+/*  MODO ESCURO */
+
+    :root {
+        --primary-color: #302AE6;
+        --secondary-color: #536390;
+        --font-color: #424242;
+        --bg-color: #fff;
+        --heading-color: #292922;
+    }
+
+    .theme-switch-wrapper{
+        display: flex;
+        align-items: center;
+        margin-left: 2em;
+        margin-top: 1em;
+    }
+
+    em{
+        margin-left: 1em;
+    }
+
+    [data-theme="dark"] {
+        --primary-color: #9A97F3;
+        --secondary-color: #818cab;
+        --font-color: #e1e1ff;
+        --bg-color: #161625;
+        --heading-color: #818cab;
+    }
+
+    .theme-switch {
+        display: inline-block;
+        height: 34px;
+        position: relative;
+        width: 60px;
+      }
+
+      .theme-switch input{
+        display: none;
+      }
+
+      .slider {
+        background-color: #ccc;
+        bottom: 0;
+        cursor: pointer;
+        left: 0;
+        position: absolute;
+        right: 0;
+        top: 0;
+        transition: .4s;
+      }
+
+      .slider:before {
+        background-color: #fff;
+        bottom: 4px;
+        content: "";
+        height: 26px;
+        left: 4px;
+        position: absolute;
+        transition: .4s;
+        width: 26px;
+      }
+
+      input:checked + .slider {
+        background-color: #66bb6a;
+      }
+      
+      input:checked + .slider:before {
+        transform: translateX(26px);
+      }
+      
+      .slider.round {
+        border-radius: 34px;
+      }
+      
+      .slider.round:before {
+        border-radius: 50%;
+      }
+
 /*  CORPO  */
 
     body{
         margin: 0px;
-        background-color: gray;
+        background-color: var(--primary-color);
     }
 
     .conteudo{
@@ -56,6 +135,20 @@
         padding-bottom: 1em;
         margin-top: 1.5em;
         color: black;
+    }
+
+    ::-webkit-scrollbar{
+        width: 10px;
+    }
+
+    ::-webkit-scrollbar-track{
+        background-color: #0378a6;
+        border-radius: 90px;
+    }
+
+    ::-webkit-scrollbar-thumb{
+        background: white;
+        border-radius: 30px;
     }
 
 
