--- a/style.css
+++ b/style.css
@@ -192,6 +192,7 @@
     }
 
     .topico > h2{
+        visibility: hidden;
         font-family: blade;
         text-shadow: 3px 3px black;
         font-size: 2.5em;
