--- a/style.css
+++ b/style.css
@@ -15,6 +15,11 @@
     src: url(fontes/blade.TTF);
 }
 
+Fonte Lato para Subtitulo
+
+Fontd Osawld para logo
+
+Fonte Playfair Display para paragrafo
 
 :root {
     --primary-color: #2195D9;
@@ -73,9 +78,9 @@
     [data-theme="dark"] {
         --primary-color: var(--bg-color);
         --secondary-color: #ffffff;
-        --font-color: rgb(139, 139, 139);
+        --font-color: rgb(236, 225, 225);
         --bg-color: #161625;
-        --heading-color: #8b8b8b;
+        --heading-color: #4b4b4b;
         --shadow-color: white;
     }
 
@@ -280,7 +285,7 @@
 
     #logos{
         background-color: black;
-        padding-bottom: 30px;
+        margin-bottom: 30px;
     }
 
     #logos > h2{
