--- a/style.css
+++ b/style.css
@@ -15,19 +15,23 @@
     src: url(fontes/blade.TTF);
 }
 
-Fonte Lato para Subtitulo
+@import url('https://fonts.googleapis.com/css2?family=Lato&family=Oswald&family=Playfair+Display&display=swap');
 
-Fontd Osawld para logo
+/*
 
-Fonte Playfair Display para paragrafo
+font-family: 'Lato', sans-serif;
+font-family: 'Oswald', sans-serif;
+font-family: 'Playfair Display', serif;
+
+*/
 
 :root {
     --primary-color: #2195D9;
     --secondary-color: #64B2DF;
     --font-color: rgb(1, 21, 59);
-    --bg-color: white;
-    --heading-color: #03588C;
-    --shadow-color: white;
+    --bg-color: rgb(241, 241, 241);
+    --heading-color: #009dff;
+    --shadow-color: rgb(255, 255, 255);
     --h2-color: #009dff;
 }
 
@@ -82,6 +86,10 @@ Fonte Playfair Display para paragrafo
         --bg-color: #161625;
         --heading-color: #4b4b4b;
         --shadow-color: white;
+    }
+
+    #darkmode{
+        color: var(--font-color);
     }
 
     .theme-switch {
@@ -144,7 +152,7 @@ Fonte Playfair Display para paragrafo
         border-radius: 50px;
         padding-bottom: 1em;
         margin-top: 1.5em;
-        color: white;
+        color: var(--shadow-color);
     }
 
     ::-webkit-scrollbar{
@@ -152,12 +160,12 @@ Fonte Playfair Display para paragrafo
     }
 
     ::-webkit-scrollbar-track{
-        background-color: var(--secondary-color);
+        background-color: var(--heading-color);
         border-radius: 90px;
     }
 
     ::-webkit-scrollbar-thumb{
-        background: white;
+        background: black;
         border-radius: 30px;
     }
 
@@ -200,24 +208,25 @@ Fonte Playfair Display para paragrafo
 
     .topico > h2{
         visibility: hidden;
-        font-family: blade;
-        text-shadow: 3px 3px black;
+        font-family: 'Oswald', sans-serif;
         font-size: 2.5em;
         padding-left: 8%;
         padding-top: 1%;
         padding-bottom: 1%;
-        color: var(--h2-color);
+        color: var(--font-color);
+        text-align: center;
     }
 
     .topico > h3{
-        font-family: blade;
-        text-shadow: 3px 3px black;
+        font-family: 'Playfair Display', serif;
         font-size: 1.25em;
         text-indent: 1em;
+        color: var(--font-color);
+        text-align: center;
     }
 
     .topico > p{
-        font-family: 'Times New Roman', Times, serif;
+        font-family: 'Playfair Display', serif;
         line-height: 1.4em;
         text-align: justify;
         text-indent: 2em;
@@ -247,7 +256,7 @@ Fonte Playfair Display para paragrafo
     }
 
     #eu > h2{
-        font-family: blade;
+        font-family: 'Osawld', sans-serif;
         text-shadow: 3px 3px black;
         font-size: 2.5em;
         padding-left: 10px;
@@ -275,7 +284,7 @@ Fonte Playfair Display para paragrafo
     /* TEMAS DE FUNDO*/
 
     #tema1{
-        background-color: var(--primary-color);
+        background-color: rgb(143, 143, 143);
         padding-bottom: 50px;
     }
 
