--- a/style.css
+++ b/style.css
@@ -148,6 +148,18 @@ font-family: 'Playfair Display', serif;
         background-color: var(--bg-color);
     }
 
+    #paralax{
+        width: 100%;
+        height: 500px;
+        background-image: url(images/20230116_114505.jpg);
+        background-attachment: fixed;
+        background-position: center;
+        background-repeat: no-repeat;
+        background-size: cover;
+        margin-top: 3em;
+        margin-bottom: 2em;
+    }
+
     .conteudo{
         border-radius: 50px;
         padding-bottom: 1em;
@@ -234,14 +246,17 @@ font-family: 'Playfair Display', serif;
         color: var(--font-color);
     }
 
+    .container{
+        display: flex;
+    }
+
     .logopl{
-        display: flexbox;
-        justify-content: center;
-        align-items: center;
+        display: flex-box;
+        text-align: center;
     }
 
     #imgpl{
-        height: 25vh;
+        height: 15vh;
         padding-left: 50px;
         padding-bottom: 40px;
     }
@@ -302,13 +317,18 @@ font-family: 'Playfair Display', serif;
         padding-bottom: 50px;
     }
 
+    #tema1 > h2 {
+        color: #fff;
+    }
+
 
     /*  TITULO - CONTATO  */
 
 
     #logos{
-        background-color: black;
+        background-color: rgb(143, 143, 143);
         margin-bottom: 30px;
+        text-align: center;
     }
 
     #logos > h2{
@@ -317,7 +337,7 @@ font-family: 'Playfair Display', serif;
 
     .imagemlogo{
         height: 1.5em;
-        width: 75px;
+        width: 15vh;
         height: auto;
         padding-left: 0.5em;
     }
