--- a/style.css
+++ b/style.css
@@ -15,13 +15,13 @@
     src: url(fontes/blade.TTF);
 }
 
-@import url('https://fonts.googleapis.com/css2?family=Lato&family=Oswald&family=Playfair+Display&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Raleway&family=Roboto+Mono&display=swap');
 
 /*
 
-font-family: 'Lato', sans-serif;
-font-family: 'Oswald', sans-serif;
-font-family: 'Playfair Display', serif;
+font-family: 'Bebas Neue', cursive;
+font-family: 'Raleway', sans-serif;
+font-family: 'Roboto Mono', monospace; - Paragrafo
 
 */
 
@@ -220,7 +220,7 @@ font-family: 'Playfair Display', serif;
 
     .topico > h2{
         visibility: hidden;
-        font-family: 'Oswald', sans-serif;
+        font-family: 'Bebas Neue', cursive;
         font-size: 2.5em;
         padding-left: 8%;
         padding-top: 1%;
@@ -230,7 +230,7 @@ font-family: 'Playfair Display', serif;
     }
 
     .topico > h3{
-        font-family: 'Playfair Display', serif;
+        font-family: 'Raleway', sans-serif;
         font-size: 1.25em;
         text-indent: 1em;
         color: var(--font-color);
@@ -238,7 +238,7 @@ font-family: 'Playfair Display', serif;
     }
 
     .topico > p{
-        font-family: 'Playfair Display', serif;
+        font-family: 'Roboto Mono', monospace;
         line-height: 1.4em;
         text-align: justify;
         text-indent: 2em;
@@ -263,7 +263,7 @@ font-family: 'Playfair Display', serif;
 
     .lista{
         padding-left: 2em;
-        font-family: 'Times New Roman', Times, serif;
+        font-family: 'Roboto Mono', monospace;
         line-height: 1.4em;
         text-align: justify;
         font-size: 1.5em;
@@ -285,7 +285,7 @@ font-family: 'Playfair Display', serif;
     }
 
     #eu > h2{
-        font-family: 'Osawld', sans-serif;
+        font-family: 'Bebas Neue', cursive;
         text-shadow: 3px 3px black;
         font-size: 2.5em;
         padding-left: 10px;
@@ -296,6 +296,7 @@ font-family: 'Playfair Display', serif;
         padding-left: 40px;
         padding-bottom: 15px;
         padding-right: 20px;
+        font-family: 'Roboto Mono', monospace;
     }
 
 
@@ -386,4 +387,10 @@ font-family: 'Playfair Display', serif;
 
     #bodycontact{
         background-color: gray;
+    }
+
+    #contact{
+        margin-bottom: 30px;
+        text-align: center;
+        color: var(--shadow-color);
     }
