--- a/style.css
+++ b/style.css
@@ -222,7 +222,6 @@ font-family: 'Roboto Mono', monospace; - Paragrafo
         visibility: hidden;
         font-family: 'Bebas Neue', cursive;
         font-size: 2.5em;
-        padding-left: 8%;
         padding-top: 1%;
         padding-bottom: 1%;
         color: var(--font-color);
@@ -230,9 +229,8 @@ font-family: 'Roboto Mono', monospace; - Paragrafo
     }
 
     .topico > h3{
-        font-family: 'Raleway', sans-serif;
+        font-family: 'Bebas Neue', cursive;
         font-size: 1.25em;
-        text-indent: 1em;
         color: var(--font-color);
         text-align: center;
     }
