--- a/style.css
+++ b/style.css
@@ -408,7 +408,16 @@ font-family: 'Roboto Mono', monospace; - Paragrafo
     }
 
 
-
+    form{
+        background-color: #009dff;
+        text-align: center;
+        margin-left: 40%;
+        margin-right: 40%;
+        padding: 20px ;
+        border-radius: 40px;
+        box-shadow: 5px 5px var(--shadow-color);
+        font-family: 'Roboto Mono', monospace;;
+    }
 
 
 
@@ -535,6 +544,17 @@ font-family: 'Roboto Mono', monospace; - Paragrafo
             height: 15vh;
             width: auto;
             padding-left: 30px;
+        }
+
+        form{
+            background-color: #009dff;
+            text-align: center;
+            margin-left: 25%;
+            margin-right: 25%;
+            padding: 20px ;
+            border-radius: 40px;
+            box-shadow: 5px 5px var(--shadow-color);
+            font-family: 'Roboto Mono', monospace;;
         }
 
 
