--- a/style.css
+++ b/style.css
@@ -416,7 +416,8 @@ font-family: 'Roboto Mono', monospace; - Paragrafo
         padding: 20px ;
         border-radius: 40px;
         box-shadow: 5px 5px var(--shadow-color);
-        font-family: 'Roboto Mono', monospace;;
+        font-family: 'Roboto Mono', monospace;
+        font-size: 2.5vh;
     }
 
 
